--- a/style.css
+++ b/style.css
@@ -157,8 +157,15 @@ canvas {
   border-radius: 50%;
 }
 .player{
-  position: relative;
+  position: absolute;
   z-index: 999;
+  display: flex;
+  justify-content: center;
+  align-items: end;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  top: 0;
 }
 .player audio{
   width: 100px;
