--- a/style.css
+++ b/style.css
@@ -85,7 +85,35 @@ canvas {
     box-shadow: 0 0 15px rgb(255, 59, 59);
   }
 }
+
 .name{
+  display: flex;
+  position: relative;
+  margin-top: 25px;
+  font-size: 25px;
+  font-weight: 900;
+  background-image: linear-gradient(
+    135deg,
+    #0400ff 0%,
+    #00d9ff 20%,
+    #ff0000 40%,
+    #e5ff00 60%,
+    #2bff00 80%,
+    #0400ff 100%);
+    text-shadow:  0 0 40px #a200ff;
+  background-size: 200% auto;
+  color: #fff;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  animation: textclip 2s linear infinite;
+  display: inline-block;
+}
+@keyframes textclip {
+  to {
+    background-position: 200% center;
+  }
+}
+/* .name{
   display: flex;
   position: relative;
   margin-top: 25px;
@@ -137,8 +165,9 @@ canvas {
     background-clip: text;
     color: transparent;
   }
-  
-}
+
+} */
+
 .row{
   display: flex;
   flex-direction: row;
@@ -151,7 +180,7 @@ canvas {
   justify-content: center;
 }
 .icon img{
-  width: 80px;
+  width: 65px;
   height: auto;
   margin: 10px;
   border-radius: 50%;
@@ -167,7 +196,8 @@ canvas {
   bottom: 0;
   top: 0;
 }
-.player audio{
+
+#autoplay{
   width: 300px;
   height: 30px;
 }
