--- a/style.css
+++ b/style.css
@@ -113,7 +113,60 @@ canvas {
     background-position: 200% center;
   }
 }
+/* .name{
+  display: flex;
+  position: relative;
+  margin-top: 25px;
+  background: linear-gradient(0, #333, #fff);
+  -webkit-background-clip: text;
+  -moz-background-clip: text;
+  background-clip: text;
+  color: transparent;
+  font-size: 25px;
+  animation: text 2s linear infinite;
+  font-weight: 900;
+  z-index: 9999;
+  
+  
+}
+@keyframes text {
+  0%{
+    background: linear-gradient(0, #850064, #e5ff00);
+    -webkit-background-clip: text;
+    -moz-background-clip: text;
+    background-clip: text;
+    color: transparent;
+  }
+  25%{
+    background: linear-gradient(0, #fffb00, #ff0000);
+    -webkit-background-clip: text;
+    -moz-background-clip: text;
+    background-clip: text;
+    color: transparent;
+  }
+  50%{
+    background: linear-gradient(0, #ff0000, #00ffff);
+    -webkit-background-clip: text;
+    -moz-background-clip: text;
+    background-clip: text;
+    color: transparent;
+  }
+  75%{
+    background: linear-gradient(0, #00fff2, #ff00d4);
+    -webkit-background-clip: text;
+    -moz-background-clip: text;
+    background-clip: text;
+    color: transparent;
+  }
+  100%{
+    background: linear-gradient(0, #ff00d4, #008585);
+    -webkit-background-clip: text;
+    -moz-background-clip: text;
+    background-clip: text;
+    color: transparent;
+  }
 
+} */
 
 .row{
   display: flex;
@@ -137,14 +190,21 @@ canvas {
   z-index: 999;
   display: flex;
   justify-content: center;
-  align-items: end;
+  align-items: flex-end;
   left: 0;
   right: 0;
-  bottom: 0;
-  top: 0;
+  bottom: 20px;
+  top: 10px;
+}
+#pause-btn {
+  display: none;
 }
 
-#autoplay{
-  width: 300px;
-  height: 30px;
+.control-btn{
+  width: 20px;
+  border-radius: 50%;
+  padding: 10px;
+  text-align: center;
+  font-size: 20px;
+  background-color: orange;
 }
