--- a/style.css
+++ b/style.css
@@ -29,15 +29,15 @@ canvas {
   height: 100vh;
   display: flex;
   flex-direction: column;
-  justify-content: flex-end;
+  justify-content:flex-start;
   align-items: center;
 }
 
 
 .container{
   display: flex;
-  position: fixed;
-  margin: auto;
+  /* position: fixed; */
+  margin: 50px auto;
   top: 0;
   bottom: 0;
   left: 0;
@@ -46,7 +46,7 @@ canvas {
   flex-direction: column;
   justify-items: center;
   width: 300px;
-  height: 500px;
+  /* height: 500px; */
   background-color: transparent;
   border-radius: 20px;
   z-index: 99;
@@ -123,60 +123,6 @@ canvas {
     background-position: 200% center;
   }
 }
-/* .name{
-  display: flex;
-  position: relative;
-  margin-top: 25px;
-  background: linear-gradient(0, #333, #fff);
-  -webkit-background-clip: text;
-  -moz-background-clip: text;
-  background-clip: text;
-  color: transparent;
-  font-size: 25px;
-  animation: text 2s linear infinite;
-  font-weight: 900;
-  z-index: 9999;
-  
-  
-}
-@keyframes text {
-  0%{
-    background: linear-gradient(0, #850064, #e5ff00);
-    -webkit-background-clip: text;
-    -moz-background-clip: text;
-    background-clip: text;
-    color: transparent;
-  }
-  25%{
-    background: linear-gradient(0, #fffb00, #ff0000);
-    -webkit-background-clip: text;
-    -moz-background-clip: text;
-    background-clip: text;
-    color: transparent;
-  }
-  50%{
-    background: linear-gradient(0, #ff0000, #00ffff);
-    -webkit-background-clip: text;
-    -moz-background-clip: text;
-    background-clip: text;
-    color: transparent;
-  }
-  75%{
-    background: linear-gradient(0, #00fff2, #ff00d4);
-    -webkit-background-clip: text;
-    -moz-background-clip: text;
-    background-clip: text;
-    color: transparent;
-  }
-  100%{
-    background: linear-gradient(0, #ff00d4, #008585);
-    -webkit-background-clip: text;
-    -moz-background-clip: text;
-    background-clip: text;
-    color: transparent;
-  }
-
-} */
 
 .row{
   display: flex;
@@ -202,7 +148,7 @@ canvas {
   z-index: 999;
   width: 300px ;
   height: 80px;
-  margin-bottom: 20px;
+  margin-bottom: 30px;
 }
 
 
@@ -241,12 +187,13 @@ canvas {
 .text-box{
   display: flex;
   flex-wrap: nowrap;
-  animation: move 3s linear infinite;
+  animation: move 2s linear infinite;
+  will-change: transform;
 }
 
 @keyframes move {
-  from { transform: translateX(0%); }
-  to { transform: translateX(-50%); }
+  from {  transform: translateX(0%); }
+  to {  transform: translateX(-50%); }
 }
 
 
