--- a/style.css
+++ b/style.css
@@ -181,22 +181,23 @@ canvas {
   padding-right: 20px;
   display: block;
   font-size: 20px;
-  animation: move 4s linear infinite;
-  will-change: transform;
-  
-  
 }
 
 .text-box{
   display: flex;
   flex-wrap: nowrap;
+  flex-direction: row;
+  align-items: center;
 }
 
+.move{
+    animation: move 4s linear infinite;
+ }
+ 
 @keyframes move {
   from {  transform: translateX(0%); }
-  to {  transform: translateX(-100%); }
+  to {  transform: translateX(-50%); }
 }
-
 
 
 .single-name{
