--- a/style.css
+++ b/style.css
@@ -128,6 +128,7 @@ canvas {
   display: flex;
   flex-direction: row;
 }
+
 .icon{
   display: flex;
   flex-direction: row;
@@ -135,11 +136,16 @@ canvas {
   
   justify-content: center;
 }
+
 .icon img{
   width: 65px;
   height: auto;
   margin: 10px;
   border-radius: 50%;
+}
+
+.icon a:hover > img {
+  filter:  drop-shadow(0px 0px 3px #ffffff);
 }
 
 .display{
